# kairo

./: .gitignore  .ignore  Cargo.toml  Makefile  deny.toml
core/amend/: Cargo.toml
core/apply/: Cargo.toml
core/blame/: Cargo.toml
core/branch/: Cargo.toml
core/commit/: Cargo.toml
core/commit/src/: main.rs
core/diff/: Cargo.toml
core/diff/src/: main.rs
core/email/: Cargo.toml
core/kairo/: Cargo.toml
core/kairo-amend/: Cargo.toml
core/kairo-apply/: Cargo.toml
core/kairo-apply /: Cargo.toml
core/kairo-blame/: Cargo.toml
core/kairo-branch/: Cargo.toml
core/kairo-clock/: Cargo.toml
core/kairo-commit/: Cargo.toml
core/kairo-diff/: Cargo.toml
core/kairo-email/: Cargo.toml
core/kairo-graph/: Cargo.toml
core/kairo-init/: Cargo.toml
core/kairo-log/: Cargo.toml
core/kairo-patch/: Cargo.toml
core/kairo-rebase/: Cargo.toml
core/kairo-reset/: Cargo.toml
core/kairo-resolve/: Cargo.toml
core/kairo-restore/: Cargo.toml
core/kairo-revert/: Cargo.toml
core/kairo-rule/: Cargo.toml
core/kairo-snapshot/: Cargo.toml
core/kairo-status/: Cargo.toml
core/kairo-status/src/: main.rs
core/kairo-web/: Cargo.toml
core/patch/: Cargo.toml
core/rebase/: Cargo.toml
core/restore/: Cargo.toml
core/revert/: Cargo.toml
core/rule/: Cargo.toml
core/snap/: Cargo.toml
core/status/: Cargo.toml
database/kairo-db/: Cargo.toml
database/kairo-storage/: Cargo.toml
remote/issues/: Cargo.toml
remote/kairo-clone/: Cargo.toml
remote/kairo-fetch/: Cargo.toml
remote/kairo-issues/: Cargo.toml
remote/kairo-pull/: Cargo.toml
remote/kairo-push/: Cargo.toml
remote/mr/: Cargo.toml
remote/news/: Cargo.toml
remote/pull/: Cargo.toml
src/: main.rs
src/core/kairo/: Cargo.toml
src/core/kairo-add/: Cargo.toml  README.md
src/core/kairo-add/src/: main.rs
src/core/kairo-amend/: Cargo.toml
src/core/kairo-amend/src/: main.rs
src/core/kairo-apply/: Cargo.toml  README.md
src/core/kairo-apply/src/: main.rs
src/core/kairo-blame/: Cargo.toml  README.md
src/core/kairo-blame/src/: main.rs
src/core/kairo-branch/: Cargo.toml  README.md
src/core/kairo-branch/src/: main.rs
src/core/kairo-checkout/: Cargo.toml  README.md
src/core/kairo-checkout/src/: main.rs
src/core/kairo-clock/: Cargo.toml  README.md
src/core/kairo-clock/src/: main.rs
src/core/kairo-commit/: Cargo.toml  README.md
src/core/kairo-commit/src/: main.rs
src/core/kairo-diff/: Cargo.toml  README.md
src/core/kairo-diff/src/: main.rs
src/core/kairo-email/: Cargo.toml  README.md
src/core/kairo-email/src/: main.rs
src/core/kairo-graph/: Cargo.toml  README.md
src/core/kairo-graph/src/: main.rs
src/core/kairo-init/: Cargo.toml  README.md
src/core/kairo-init/src/: main.rs
src/core/kairo-log/: Cargo.toml  README.md
src/core/kairo-log/src/: main.rs
src/core/kairo-patch/: Cargo.toml  README.md
src/core/kairo-patch/src/: main.rs
src/core/kairo-rebase/: Cargo.toml  README.md
src/core/kairo-rebase/src/: main.rs
src/core/kairo-reset/: Cargo.toml  README.md
src/core/kairo-reset/src/: main.rs
src/core/kairo-resolve/: Cargo.toml  README.md
src/core/kairo-resolve/src/: main.rs
src/core/kairo-restore/: Cargo.toml  README.md
src/core/kairo-restore/src/: main.rs
src/core/kairo-revert/: Cargo.toml  README.md
src/core/kairo-revert/src/: main.rs
src/core/kairo-rules/: Cargo.toml
src/core/kairo-rules/src/: main.rs
src/core/kairo-show/: Cargo.toml
src/core/kairo-show/src/: README.md  main.rs
src/core/kairo-snapshot/: Cargo.toml  README.md
src/core/kairo-snapshot/src/: main.rs
src/core/kairo-status/: Cargo.toml  README.md
src/core/kairo-status/src/: main.rs
src/core/kairo-tree/: Cargo.toml  README.md
src/core/kairo-tree/src/: main.rs
src/core/kairo-try/: Cargo.toml  README.md
src/core/kairo-try/src/: main.rs
src/core/kairo-web/: Cargo.toml  README.md
src/core/kairo-web/src/: main.rs
src/core/tux/: Cargo.toml  README.md
src/core/tux/src/: main.rs
src/database/kairo-db/: Cargo.toml
src/database/kairo-storage/: Cargo.toml
src/net/eywa/: Cargo.toml
src/net/remote/kairo-clone/: Cargo.toml
src/net/tux/: Cargo.toml
src/remote/kairo-clone/: Cargo.toml
src/remote/kairo-fetch/: Cargo.toml
src/remote/kairo-issues/: Cargo.toml
src/remote/kairo-pull/: Cargo.toml
src/remote/kairo-push/: Cargo.toml
src/remote/kairo-remote/: Cargo.toml
src/workflows/kairo-iso/: Cargo.toml
src/workflows/kairo-visualize/: Cargo.toml
src/workflows/kairo-work/: Cargo.toml
teams/boards/kairo-dashboard/: Cargo.toml
teams/communication/contact/: Cargo.toml
teams/communication/kairo-chat/: Cargo.toml
teams/communication/kairo-comment/: Cargo.toml
teams/communication/kairo-contact/: Cargo.toml
teams/developer/customize/: Cargo.toml
teams/developer/kairo-code/: Cargo.toml
teams/developer/kairo-keys/: Cargo.toml
teams/developer/kairo-search/: Cargo.toml
teams/developer/kairo-stats/: Cargo.toml
teams/developer/kairo-submit/: Cargo.toml
teams/developer/key/: Cargo.toml
teams/developer/submit/: Cargo.toml
teams/issues/bug/: Cargo.toml
teams/issues/kairo-issue/: Cargo.toml
teams/manager/analys/: Cargo.toml
teams/manager/assign/: Cargo.toml
teams/manager/kairo-analys/: Cargo.toml
teams/manager/kairo-assign/: Cargo.toml
teams/manager/kairo-invoice/: Cargo.toml
teams/manager/kairo-list/: Cargo.toml
teams/manager/kairo-perms/: Cargo.toml
teams/manager/kairo-predict/: Cargo.toml
teams/manager/kairo-progress/: Cargo.toml
teams/manager/kairo-remember/: Cargo.toml
teams/manager/kairo-review/: Cargo.toml
teams/manager/kairo-teams/: Cargo.toml
teams/manager/kairo-todo/: Cargo.toml
teams/manager/predict/: Cargo.toml
teams/manager/remember/: Cargo.toml
teams/manager/teams/: Cargo.toml
teams/payment/fact/: Cargo.toml
teams/payment/pay/: Cargo.toml
teams/project/describe/: Cargo.toml
teams/project/due/: Cargo.toml
workflows/iso/: Cargo.toml
workflows/kairo-iso/: Cargo.toml
workflows/kairo-visualize/: Cargo.toml
workflows/kairo-work/: Cargo.toml
workflows/visualize/: Cargo.toml
(+53 files in other folders)
