[workspace]
members = [
    "core/kairo-amend",
    "core/kairo-apply",
    "core/kairo-blame",
    "core/kairo-branch",
    "core/kairo-clock",
    "core/kairo-commit",
    "core/kairo-diff",
    "core/kairo-email",
    "core/kairo",
    "core/kairo-graph",
    "core/kairo-init",
    "core/kairo-log",
    "core/kairo-patch",
    "core/kairo-rebase",
    "core/kairo-reset",
    "core/kairo-resolve",
    "core/kairo-restore",
    "core/kairo-revert",
    "core/kairo-rule",
    "core/kairo-snapshot",
    "core/kairo-status",
    "core/kairo-web",
    "database/kairo-db",
    "database/kairo-storage",
    "remote/kairo-clone",
    "remote/kairo-fetch",
    "remote/kairo-issues",
    "remote/kairo-pull",
    "teams/boards/kairo-dashboard",
    "teams/communication/kairo-chat",
    "teams/communication/kairo-comment",
    "teams/communication/kairo-contact",
    "teams/developer/kairo-code",
    "teams/developer/kairo-gui",
    "teams/developer/kairo-keys",
    "teams/developer/kairo-search",
    "teams/developer/kairo-stats",
    "teams/developer/kairo-submit",
    "teams/manager/kairo-analys",
    "teams/manager/kairo-assign",
    "teams/manager/kairo-perms",
    "teams/manager/kairo-predict",
    "teams/manager/kairo-progress",
    "teams/manager/kairo-remember",
    "teams/manager/kairo-review",
    "teams/manager/kairo-teams",
    "teams/manager/kairo-todo",
    "teams/manager/kairo-invoice",
    "workflows/kairo-iso",
    "workflows/kairo-visualize",
    "workflows/kairo-work",
]
resolver = "2"
