[workspace]
members = [
    "src/core/kairo-amend",
    "src/core/kairo-apply",
    "src/core/kairo-blame",
    "src/core/kairo-branch",
    "src/core/kairo-clock",
    "src/core/kairo-commit",
    "src/core/kairo-diff",
    "src/core/kairo-email",
    "src/core/kairo",
    "src/core/kairo-graph",
    "src/core/kairo-init",
    "src/core/kairo-log",
    "src/core/kairo-patch",
    "src/core/kairo-rebase",
    "src/core/kairo-reset",
    "src/core/kairo-resolve",
    "src/core/kairo-restore",
    "src/core/kairo-revert",
    "src/core/kairo-rules",
    "src/core/kairo-snapshot",
    "src/core/kairo-status",
    "src/core/kairo-web",
    "src/database/kairo-db",
    "src/database/kairo-storage",
    "src/remote/kairo-clone",
    "src/remote/kairo-fetch",
    "src/remote/kairo-issues",
    "src/remote/kairo-pull",
    "src/teams/boards/kairo-dashboard",
    "src/teams/communication/kairo-chat",
    "src/teams/communication/kairo-contact",
    "src/teams/developer/kairo-code",
    "src/teams/developer/kairo-gui",
    "src/teams/developer/kairo-keys",
    "src/teams/developer/kairo-search",
    "src/teams/developer/kairo-stats",
    "src/teams/developer/kairo-submit",
    "src/teams/manager/kairo-analys",
    "src/teams/manager/kairo-assign",
    "src/teams/manager/kairo-perms",
    "src/teams/manager/kairo-predict",
    "src/teams/manager/kairo-progress",
    "src/teams/manager/kairo-remember",
    "src/teams/manager/kairo-review",
    "src/teams/manager/teams",
    "src/teams/manager/kairo-todo",
    "src/teams/manager/kairo-invoice",
    "src/workflows/kairo-iso",
    "src/workflows/kairo-visualize",
    "src/workflows/kairo-work",
    "src/remote/kairo-remote",
    "src/core/kairo-tree",
    "src/net/tux",
]
resolver = "2"
