[workspace]
members = [
    "src/core/kairo-amend",
    "src/core/kairo-apply",
    "src/core/kairo-blame",
    "src/core/kairo-branch",
    "src/core/kairo-clock",
    "src/core/kairo-commit",
    "src/core/kairo-diff",
    "src/core/kairo-email",
    "src/core/tux",
    "src/core/kairo-graph",
    "src/core/kairo-init",
    "src/core/kairo-log",
    "src/core/kairo-patch",
    "src/core/kairo-rebase",
    "src/core/kairo-reset",
    "src/core/kairo-resolve",
    "src/core/kairo-restore",
    "src/core/kairo-revert",
    "src/core/kairo-rules",
    "src/core/kairo-snapshot",
    "src/core/kairo-status",
    "src/core/kairo-tree",
    "src/core/kairo-try",
    "src/core/kairo-web",
    "src/net/remote/kairo-clone",
    "src/net/remote/kairo-fetch",
    "src/net/remote/kairo-issues",
    "src/net/remote/kairo-pull",
    "src/net/remote/kairo-push",
    "src/net/remote/kairo-remote",
    "src/teams/boards/kairo-dashboard",
    "src/teams/communication/kairo-chat",
    "src/teams/communication/kairo-contact",
    "src/teams/developer/kairo-keys",
    "src/teams/developer/kairo-search",
    "src/teams/developer/kairo-stats",
    "src/teams/developer/kairo-submit",
    "src/teams/manager/kairo-analys",
    "src/teams/manager/kairo-assign",
    "src/teams/manager/kairo-perms",
    "src/teams/manager/kairo-predict",
    "src/teams/manager/kairo-progress",
    "src/teams/manager/kairo-remember",
    "src/teams/manager/kairo-review",
    "src/teams/manager/teams",
    "src/teams/manager/kairo-todo",
    "src/teams/manager/kairo-invoice", "src/core/kairo-show", "src/core/kairo-checkout",
]
resolver = "2"
