[package]
name = "kairo-amend"
version = "0.0.0"
edition = "2021"
description = "ammend a commit"
license = "GPL-3.0-or-later"
repository = "https://github.com/otechdo/kairo/tree/main/src/core/kairo-amend/"
readme = "README.md"
keywords = ["commit", "amend", "message"]
categories = ["development-tools"]

[dependencies]
