[package]
name = "kairo-commit"
version = "0.0.0"
edition = "2021"
description = "commit source code"
license = "GPL-3.0-or-later"
repository = "https://github.com/otechdo/kairo/tree/main/src/core/kairo-commit"
readme = "README.md"
keywords = ["commit"]
categories = ["development-tools"]

[dependencies]
