[package]
name = "kairo-email"
version = "0.0.0"
edition = "2021"
description = "send email message to your teams"
license = "GPL-3.0-or-later"
repository = "https://github.com/otechdo/kairo/tree/main/src/core/kairo-email"
readme = "README.md"
keywords = ["teams", "email", "message", "contact"]
categories = ["development-tools"]
