[package]
name = "kairo-graph"
version = "0.0.0"
edition = "2021"
description = "display repository data as a graph"
license = "GPL-3.0-or-later"
repository = "https://github.com/otechdo/kairo/tree/main/src/core/kairo-graph"
readme = "README.md"
keywords = ["graph", "display", "data", "stats"]
categories = ["development-tools"]

[dependencies]
