[package]
name = "kairo-init"
version = "0.0.0"
edition = "2021"
description = "init a new repository"
license = "GPL-3.0-or-later"
repository = "https://github.com/otechdo/kairo/tree/main/src/core/kairo-init"
readme = "README.md"
keywords = ["init", "repository", "track", "work"]
categories = ["development-tools"]
[dependencies]
