[package]
name = "kairo-resolve"
version = "0.0.0"
edition = "2021"
description = "resolve conflicts"
license = "GPL-3.0-or-later"
repository = "https://github.com/otechdo/kairo/tree/main/src/core/kairo-resolve"
readme = "README.md"
keywords = ["conflicts", "repository", "resolve", "work"]
categories = ["development-tools"]
[dependencies]
