[package]
name = "kairo-status"
version = "0.0.0"
edition = "2021"
description = "display current modification state"
license = "GPL-3.0-or-later"
repository = "https://github.com/otechdo/kairo/tree/main/src/core/kairo-status"
readme = "README.md"
keywords = ["status", "repository", "track", "work"]
categories = ["development-tools"]
[dependencies]
