[package]
name = "tux"
version = "0.0.0"
edition = "2021"
description = "interface for manage kairo repos"
license = "GPL-3.0-or-later"
repository = "https://github.com/otechdo/kairo/tree/main/src/core/tux"
readme = "README.md"
keywords = ["kairo", "repository", "management", "work"]
categories = ["development-tools"]
[dependencies]
